refactor and update code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Fourth</string>
+    <string name="app_name">Seventh</string>
     <string-array name="string_array">
         <item>1000</item>
         <item>2000</item>
